Fix overflowing content in pre tags

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -35,3 +35,7 @@ a {
 p {
   line-height: 150%;
 }
+
+pre {
+  white-space: pre-wrap;
+}
